--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="all.min.css">
 </head>
 <body>
     <nav>
@@ -61,14 +62,46 @@
         <p class="allproducts">All Products</p>
 
         <div class="container-3">
-            <a href=""><img src="images/n1.png" alt=""></a>
-            <a href=""><img src="images/n2.png" alt=""></a>
-            <a href=""><img src="images/n3.png" alt=""></a>
-            <a href=""><img src="images/n4.png" alt=""></a>
-            <a href=""><img src="images/n5.png" alt=""></a>
-            <a href=""><img src="images/n6.png" alt=""></a>
-            <a href=""><img src="images/n7.png" alt=""></a>
-            <a href=""><img src="images/n8.png" alt=""></a>
+            <div class="prod">
+                <a href=""><img src="images/n1.png" alt=""></a>
+                <div class="rate">
+                </div>
+            </div>
+            <div class="prod">
+                <a href=""><img src="images/n2.png" alt=""></a>
+                <div class="rate">
+                </div>
+            </div>
+            <div class="prod">
+                <a href=""><img src="images/n3.png" alt=""></a>
+                <div class="rate">
+                </div>
+            </div>
+            <div class="prod">
+                <a href=""><img src="images/n4.png" alt=""></a>
+                <div class="rate">
+                </div>
+            </div>
+            <div class="prod">
+                <a href=""><img src="images/n5.png" alt=""></a>
+                <div class="rate">
+                </div>
+            </div>
+            <div class="prod">
+                <a href=""><img src="images/n6.png" alt=""></a>
+                <div class="rate">
+                </div>
+            </div>
+            <div class="prod">
+                <a href=""><img src="images/n7.png" alt=""></a>
+                <div class="rate">
+                </div>
+            </div>
+            <div class="prod">
+                <a href=""><img src="images/n8.png" alt=""></a>
+                <div class="rate">
+                </div>
+            </div>
         </div>
     </main>
     
