--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="all.min.css">
+    <link rel="stylesheet" href="webfonts">
 </head>
 <body>
     <nav>
