--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="all.min.css">
-    <link rel="stylesheet" href="webfonts">
+    <link rel="stylesheet" href="webfonts/fa-brands-400.ttf">
+    <link rel="stylesheet" href="webfonts/fa-brands-400.woff2">
+    <link rel="stylesheet" href="webfonts/fa-regular-400.ttf">
+    <link rel="stylesheet" href="webfonts/fa-brands-400.ttf">
+    <link rel="stylesheet" href="webfonts/fa-regular-400.woff2">
+    <link rel="stylesheet" href="webfonts/fa-solid-900.woff2">
+    <link rel="stylesheet" href="webfonts/fa-v4compatibility.ttf">
+    <link rel="stylesheet" href="webfonts/fa-v4compatibility.woff2">
 </head>
 <body>
     <nav>
