--- a/index.html
+++ b/index.html
@@ -6,14 +6,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="all.min.css">
-    <link rel="stylesheet" href="webfonts/fa-brands-400.ttf">
-    <link rel="stylesheet" href="webfonts/fa-brands-400.woff2">
-    <link rel="stylesheet" href="webfonts/fa-regular-400.ttf">
-    <link rel="stylesheet" href="webfonts/fa-brands-400.ttf">
-    <link rel="stylesheet" href="webfonts/fa-regular-400.woff2">
-    <link rel="stylesheet" href="webfonts/fa-solid-900.woff2">
-    <link rel="stylesheet" href="webfonts/fa-v4compatibility.ttf">
-    <link rel="stylesheet" href="webfonts/fa-v4compatibility.woff2">
 </head>
 <body>
     <nav>
@@ -115,5 +107,6 @@
     
     <footer></footer>
     <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/2823ee6037.js" crossorigin="anonymous"></script>
 </body>
 </html>
