--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
     <nav>
@@ -107,6 +108,5 @@
     
     <footer></footer>
     <script src="script.js"></script>
-    <script src="https://kit.fontawesome.com/2823ee6037.js" crossorigin="anonymous"></script>
 </body>
 </html>
