--- a/index.html
+++ b/index.html
@@ -21,20 +21,33 @@
 
             <div class="icons">
                 <img src="images/search.svg" alt="">
-                <img src="images/shopping-cart.svg" alt="">
+                <div class="cartCounter">
+                    <div class="counter">0</div>
+                    <img class="cart" src="images/shopping-cart.svg" alt="">
+                </div>
                 <img src="images/user.svg" alt="">
                 <img class="menu" src="images/menu-burger.svg" alt="">
             </div>
 
     </nav>
         <section class="drop-down hide">
-            <img class="close margin" src="images/cross.svg" alt="" width="18px" height="18px">
+            <i class="close margin fa-regular fa-circle-xmark fa-xl" style="color: #ce3700;"></i>
             <div class="drop-down-child">
                 <a href="">Shop</a>
                 <a href="">On Sale</a>
                 <a href="">New Arrivals</a>
                 <a href="">Brands</a>
                 <a href="">Contact</a>
+            </div>
+        </section>
+        <section class="cart-drop-down hide">
+            <i class="close-cart margin fa-regular fa-circle-xmark fa-xl" style="color: #ce3700;"></i>
+            <div class="cart-drop-down-child">
+                <h1 href="">Shopping Cart</h1>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
             </div>
         </section>
 
