--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="icons">
                 <img src="images/search.svg" alt="">
                 <div class="cartCounter">
-                    <div class="counter">0</div>
+                    <div class="counter hide-counter">0</div>
                     <img class="cart" src="images/shopping-cart.svg" alt="">
                 </div>
                 <img src="images/user.svg" alt="">
@@ -41,13 +41,16 @@
             </div>
         </section>
         <section class="cart-drop-down hide">
-            <i class="close-cart margin fa-regular fa-circle-xmark fa-xl" style="color: #ce3700;"></i>
+            <div>
+                <i class="close-cart margin fa-regular fa-circle-xmark fa-xl" style="color: #ce3700;"></i>
+                <h1 class="cart-head" href="">Shopping Cart</h1>
+            </div>
             <div class="cart-drop-down-child">
-                <h1 href="">Shopping Cart</h1>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
+                
+            </div>
+            <div class="buttons">
+                <button class="btn1">Close</button>
+                <button class="btn2">Check Out</button>
             </div>
         </section>
 
@@ -76,42 +79,42 @@
 
         <div class="container-3">
             <div class="prod">
-                <a href=""><img src="images/n1.png" alt=""></a>
+                <a class="img-a" href=""><img class="img" src="images/n1.png" alt=""></a>
                 <div class="rate">
                 </div>
             </div>
             <div class="prod">
-                <a href=""><img src="images/n2.png" alt=""></a>
+                <a class="img-a" href=""><img class="img" src="images/n2.png" alt=""></a>
                 <div class="rate">
                 </div>
             </div>
             <div class="prod">
-                <a href=""><img src="images/n3.png" alt=""></a>
+                <a class="img-a" href=""><img class="img" src="images/n3.png" alt=""></a>
                 <div class="rate">
                 </div>
             </div>
             <div class="prod">
-                <a href=""><img src="images/n4.png" alt=""></a>
+                <a class="img-a" href=""><img class="img" src="images/n4.png" alt=""></a>
                 <div class="rate">
                 </div>
             </div>
             <div class="prod">
-                <a href=""><img src="images/n5.png" alt=""></a>
+                <a class="img-a" href=""><img class="img" src="images/n5.png" alt=""></a>
                 <div class="rate">
                 </div>
             </div>
             <div class="prod">
-                <a href=""><img src="images/n6.png" alt=""></a>
+                <a class="img-a" href=""><img class="img" src="images/n6.png" alt=""></a>
                 <div class="rate">
                 </div>
             </div>
             <div class="prod">
-                <a href=""><img src="images/n7.png" alt=""></a>
+                <a class="img-a" href=""><img class="img" src="images/n7.png" alt=""></a>
                 <div class="rate">
                 </div>
             </div>
             <div class="prod">
-                <a href=""><img src="images/n8.png" alt=""></a>
+                <a class="img-a" href=""><img class="img" src="images/n8.png" alt=""></a>
                 <div class="rate">
                 </div>
             </div>
